sidebar and navbar UI added

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,7 +28,7 @@
           </div>
           <a routerLink="/forgot-password" class="text-sm text-purple-600 hover:underline">Forgot Password?</a>
         </div>
-        <button type="submit" class="w-full py-2 px-4 bg-purple-600 text-white rounded-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500">Login</button>
+        <button routerLink="/home" class="w-full py-2 px-4 bg-purple-600 text-white rounded-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500">Login</button>
       </form>
     </div>
   </div>
